menambah list berupa angka

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 <body>
     <h4>Belajar Cara mengekspor repostiroy dari komputer local ke github</h4>
     
+    <ul>
+        <li>satu</li>
+        <li>dua</li>
+        <li>tiga</li>
+    </ul>
 </body>
 </html>
